# corpusqa

./: LICENSE  README.md  corpusqa.example.yaml  corpusqa.yaml  main.py  pyproject.toml
corpusqa/: __init__.py  errors.py  evalkit.py  logging_setup.py
corpusqa/catalog/: __init__.py  store.py  summarizer.py
corpusqa/cli/: __init__.py  main.py
corpusqa/config/: __init__.py  loader.py  schema.py
corpusqa/ingest/: __init__.py  chunker.py  converter.py  discovery.py  pipeline.py
corpusqa/llm/: __init__.py  structured.py  tasks.py
corpusqa/prompts/: __init__.py  catalog_card.py  extract.py  rerank_llm.py  route.py  synthesize.py
corpusqa/query/: __init__.py  budget.py  extractor.py  hits.py  pipeline.py  router.py  synthesizer.py
corpusqa/retrieval/: __init__.py  embedder.py  rerank.py  vector_store.py
tests/eval/: qa_pairs.yaml
tests/eval/fixture_corpus/essays/: grace_essay.md  sin_in_the_flesh.md
tests/eval/fixture_corpus/hydrology/: aquifer_notes.md  sabine_flow.txt
tests/eval/fixture_corpus/kitchen/: sourdough.md
tests/eval/fixture_corpus/meetings/: q3_growth_review.md  retro_q1.md  standup_2026_05.md
tests/unit/: fakes.py  test_budget.py  test_budget_gates.py  test_catalog_hierarchical.py  test_cli.py  test_config.py  test_converter_flags.py  test_discovery.py  test_evalkit.py  test_extract_merge.py  test_extract_split.py  test_fixes.py  test_index_pipeline.py  test_logging.py  test_pipeline_e2e.py  test_provenance.py  test_query_e2e.py  test_routed_mode.py  test_router.py  test_store.py  test_structured.py  test_sweep.py  test_synthesizer.py
(+11 files in other folders)
